Fixed Scrollbar Again

--- a/homework/hw04/styles.css
+++ b/homework/hw04/styles.css
@@ -1,7 +1,7 @@
 .all-comments{
     flex-direction: vertical;
     /* width: 35%; */
-    max-height: calc(100vh - 200px);
+    max-height: calc(85%);
     overflow-y: auto;
     padding: 20px;
     height: 100%;
